--- a/SRT-/index.html
+++ b/SRT-/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="website icon" type="png" href="logo.png"> 
-    <title>Shadowverse Technologies</title>
+    <title>Roshan Technologies</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -102,12 +102,11 @@
 
         <div class="footer-buttons">
             <button class="contact-btn">SIGN IN</button>
-            <button class="demo-btn">LOGIN IN</button>
+            <button class="demo-btn">LOGIN</button>
         </div>
 
         <div class="development-notice">UPGRADING...</div>
     </div>
-    <div class="wave-top"></div>
-</footer>
+    
 </body>
 </html>
