--- a/SRT-/index.html
+++ b/SRT-/index.html
@@ -52,8 +52,8 @@
     </main>
     <section style="background-color: black; color: white; padding: 50px; font-family: Arial, sans-serif;">
         <section style="text-align: center; margin-bottom: 30px;">
-            <h2 style="font-size: 36px; font-weight: bold;">Welcome to the Future of Innovation</h2>
-            <p style="font-size: 18px; line-height: 1.6;">Technology is evolving at lightning speed, and we’re here to keep you ahead of the curve. From artificial intelligence to next-gen computing, we provide the insights, solutions, and advancements that shape tomorrow.</p>
+            <h2 style="font-size: 36px; font-weight: bold;">Welcome to the Future of Innovation <BR>Innovating the Future</h2>
+            <p style="font-size: 18px; line-height: 1.6;">Technology is evolving at lightning speed, and we’re here to keep you ahead of the curve. From artificial intelligence to next-gen computing, we provide the insights, solutions, and advancements that shape tomorrow.<BR>Empowering businesses with cutting-edge technology solutions.</p>
     <div style="background-color: #1a1a1a; color: white; padding: 30px; border-radius: 10px; font-family: Arial, sans-serif;">
         <div style="margin-bottom: 30px; text-align: center;">
             <h3 style="font-size: 24px; font-weight: bold; margin-bottom: 10px;">Our Vision</h3>
