--- a/SRT-/index.html
+++ b/SRT-/index.html
@@ -47,7 +47,7 @@
         </div>
 
         <div class="main-logo" style="text-align: center; margin-top: 20px;">
-            <img src="logo.png" alt="SD Logo" class="sd-logo" style="width: 200px; height: 200px;">
+            <img src="logo.png" alt="Srt Logo" class="sd-logo" style="width: 200px; height: 200px;">
         </div>
     </main>
     <section style="background-color: black; color: white; padding: 50px; font-family: Arial, sans-serif;">
