--- a/SRT-/index.html
+++ b/SRT-/index.html
@@ -25,7 +25,7 @@
                 <a href="#" style="color: #f39c12; text-decoration: none; font-weight: bold; font-size: 16px; transition: color 0.3s;">
                     SERVICE
                 </a>
-                <a href="#" style="color: #f39c12; text-decoration: none; font-weight: bold; font-size: 16px; transition: color 0.3s;">
+                <a href="#" style="color: #444; text-decoration: none; font-weight: bold; font-size: 16px; transition: color 0.3s;">
                     CONTACT
                 </a>
             </nav>
